Fixing menu_links.

--- a/samthomas.menu_links.yml
+++ b/samthomas.menu_links.yml
@@ -1,4 +1,4 @@
-samthomas.settings:
+samthomas.description:
   title: SamThomas Configuration
   route_name: samthomas.settings
   menu_name: samthomas
