--- a/samthomas.menu_links.yml
+++ b/samthomas.menu_links.yml
@@ -1,4 +1,4 @@
 samthomas.description:
-  title: SamThomas Configuration
-  route_name: samthomas.settings
+  title: SamThomas Description
+  route_name: samthomas.description
   menu_name: samthomas
